--- a/apps/templates/login.html
+++ b/apps/templates/login.html
@@ -35,28 +35,36 @@
 
 {% block content%}
     <form action="{{ url_for("myapp.loginin") }}" method="post" class="form-inline">
-    <div style="width: 100%;background-color: white;height: 400px;margin-top: 100px">
+    <div style="width: 100%;height: 100px"></div>
+    <div style="width: 100%;background-color: white;height: 300px;">
         {% if error %}
         <p style="color: red;text-align: center;width: 100%;display: block">{{ error }}</p>
         {% endif %}
         <table class="logindiv">
             <tr>
                 <td>
-                    <label>用户名:</label> <input id="uname" name="uname" class="form-control" type="text">
+                    <label>用户名:</label>
+                </td>
+                <td>
+                    <input id="uname" name="uname" class="form-control" type="text">
                 </td>
             </tr>
             <tr>
                 <td>
-                    <label>密码:</label> <input id="upwd" name="pwd" class="form-control" type="password">
+                    <label>密码:</label>
+                </td>
+                <td>
+                    <input id="upwd" name="pwd" class="form-control" type="password">
                 </td>
             </tr>
             <tr>
-                <td>
-                    <label>记住我:</label> <input id="remb" name="remember_me" class="form-control" type="checkbox">
+                <td colspan="2">
+                    <label>记住我:</label>
+                    <input id="remb" name="remember_me" class="form-control" type="checkbox">
                 </td>
             </tr>
             <tr>
-                <td>
+                <td colspan="2">
                     <input class="btn btn-default" type="button" onclick="location='#'" value="注册">
                     <input class="btn btn-primary" type="submit" value="登录">
                 </td>
