--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -16,9 +16,9 @@
 <div class="mymain">
     <div class="mymenu">{#所以页面同一个导航栏#}
         <ul class="mynav">
-            <li><a id="l1" href="{{ url_for("myapp.home") }}">首页</a></li>
-            <li><a id="l2" href="{{ url_for("jobsubmit.usermessage") }}">管理</a></li>
-            <li><a id="l3" href="{{ url_for("myapp.about") }}">关于</a></li>
+            <li><a id="l1" href="{{ url_for('myapp.home') }}">首页</a></li>
+            <li><a id="l2" href="{{ url_for('jobsubmit.usermessage') }}">管理</a></li>
+            <li><a id="l3" href="{{ url_for('myapp.about') }}">关于</a></li>
         </ul>
         <div class="userstatus">
             {% if current_user and current_user.is_authenticated %}
@@ -26,17 +26,17 @@
                 <button type="button" class="btn btn-default btn-sm">
                     <span class="glyphicon glyphicon-user">{{ current_user.user_name }}</span>
                 </button>
-                <a class="btn btn-default btn-sm" href="{{url_for("myapp.loginout")}}">
+                <a class="btn btn-default btn-sm" href="{{url_for('myapp.loginout')}}">
                     <span class="glyphicon glyphicon-log-out">
                         退出
                     </span>
                 </a>
             {% else %}
                 <label>你好,请</label>
-                <a class="btn btn-info btn-sm" href="{{ url_for("myapp.loginin") }}">
+                <a class="btn btn-info btn-sm" href="{{ url_for('myapp.loginin') }}">
                     <span class="glyphicon glyphicon-log-in">登录</span>
                 </a>
-                <a class="btn btn-default btn-sm" href="{{ url_for("myapp.register") }}">
+                <a class="btn btn-default btn-sm" href="{{ url_for('myapp.register') }}">
                     <span class="glyphicon glyphicon-edit">注册</span>
                 </a>
             {% endif %}
