基本完成，有待改善

--- a/apps/templates/search.html
+++ b/apps/templates/search.html
@@ -6,7 +6,7 @@
 {% block extra_head %}
     <script type="text/javascript">
     $(function(){
-        $("#l1").css("background-color","#ffffff");
+        $("#l2").css("background-color","#ffffff");
     });
     </script>
     <style>
@@ -15,6 +15,21 @@
 {% endblock %}
 
 {% block content%}
+
+    <div style="margin:auto; padding: 0px; width: 100%;text-align: center;overflow:hidden">
+    <div class="leftnav">
+        <dl>
+            <dt>通知</dt>
+            <dd><a href="{{ url_for('jobsubmit.usermessage') }}">用户通知</a></dd>
+            <dt>作业提交</dt>
+            <dd><a href="{{ url_for('jobsubmit.simplesub') }}">简单作业</a></dd>
+            <dd><a href="{{ url_for('jobsubmit.complexsub') }}">大作业</a></dd>
+            <dt>作业查询</dt>
+            <dd><a href="#">已完成</a></dd>
+            <dd class="selectnav"><a href="{{ url_for('search.home')}}">正在进行</a></dd>
+        </dl>
+    </div>
+    <div class="rightcent">
     <table class="table">
         <caption>作业列表</caption>
         <thead>
@@ -41,8 +56,7 @@
         {%endfor%}
         </tbody>
     </table>
-
-
-
+    </div>
+    </div>
 {% endblock %}
 
