--- a/apps/templates/jobcomplex.html
+++ b/apps/templates/jobcomplex.html
@@ -3,57 +3,96 @@
     作业管理
 {% endblock %}
 {% block extra_head %}
+    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.uploadify.min.js') }}"></script>
+    <link href="/static/css/uploadify.css" rel="stylesheet">
     <script type="text/javascript">
-    $(function(){
-        $("#l2").css("background-color","#ffffff");
-    });
+        $(function () {
+            $("#upfile").uploadify({
+                'swf': "/static/js/uploadify.swf",
+                'uploader': '/upload',
+                'cancelImg': '/static/img/uploadify-cancel.png',
+                'queueID': 'listf',
+                'buttonText': "上传文件",
+                'auto': true,
+                'multi': true,
+                'fileObjName': 'files',
+                'queueSizeLimit': 5,
+                'removeCompleted': false,
+                {#            'onUploadSuccess':function(file, data, response) {#}
+                {#                alert(file.name);#}
+                {#            },#}
+                'onCancel': function (file) {
+                    $.post("/delfile", {fname: file.name}, function (msg) {
+                    })
+                }
+            });
+
+            $("#l2").css("background-color", "#ffffff");
+        });
     </script>
     <style>
+        .cfile {
+            width: 0px;
+            height: 0px;
+            opacity: 0;
+            filter: alpha(opacity=0)
+        }
     </style>
 {% endblock %}
 
-{% block content%}
+{% block content %}
     <div style="margin:auto; padding: 0px; width: 100%;text-align: center;overflow:hidden">
-    <div class="leftnav">
-        <dl>
-            <dt>通知</dt>
-            <dd><a href="{{ url_for('jobsubmit.usermessage')}}">用户通知</a></dd>
-            <dt>作业提交</dt>
-            <dd><a href="{{ url_for('jobsubmit.simplesub')}}">简单作业</a></dd>
-            <dd class="selectnav"><a href="{{url_for('jobsubmit.complexsub')}}">大作业</a></dd>
-            <dt>作业查询</dt>
-            <dd><a href="#">已完成</a></dd>
-            <dd><a href="{{url_for('search.home')}}">正在进行</a></dd>
-        </dl>
-    </div>
-    <div class="rightcent">
-        <form action="{{ url_for('jobsubmit.complexsub') }}" method="post" class="form-inline">
-        <table class="table table-striped">
-            <caption style="text-align: center">大作业</caption>
+        <div class="leftnav">
+            <dl>
+                <dt>通知</dt>
+                <dd><a href="{{ url_for('jobsubmit.usermessage') }}">用户通知</a></dd>
+                <dt>作业提交</dt>
+                <dd><a href="{{ url_for('jobsubmit.simplesub') }}">简单作业</a></dd>
+                <dd class="selectnav"><a href="{{ url_for('jobsubmit.complexsub') }}">大作业</a></dd>
+                <dt>作业查询</dt>
+                <dd><a href="#">已完成</a></dd>
+                <dd><a href="{{ url_for('search.home') }}">正在进行</a></dd>
+            </dl>
+        </div>
+        <div class="rightcent">
+            <table class="table table-striped">
+                <caption style="text-align: center">大作业</caption>
 
-            <tbody>
-            <tr>
-                <td colspan="2">
-                    <p>批量文件上传..</p>
-                </td>
-            </tr>
-            <tr>
-                <td><label>执行：</label></td>
-                <td><input id="parastr" name="para_str" class="form-control" type="text"></td>
-            </tr>
-            <tr>
-                <td><label>参数：</label></td>
-                <td><input id="parastr" name="para_str" class="form-control" type="text"></td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <input class="btn btn-default" id="bt_sub" type="button" value="提交">
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        </form>
-    </div>
+                <tbody>
+                <tr>
+                    <td colspan="2">
+                        <div id="updiv" style="width: 100%;height: 100%">
+                            <input type="file" name="files" id="upfile" multiple="multiple">
+
+                        </div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <form action="{{ url_for('jobsubmit.complexsub') }}" method="post" class="form-inline">
+                <div>
+                    <ul class="list-group" id="listf">
+                    </ul>
+                </div>
+                <table class="table table-striped">
+                    <tbody>
+                    <tr>
+                        <td><label>执行文件：</label></td>
+                        <td><input id="execstr" name="exec_str" class="form-control" type="text"></td>
+                    </tr>
+                    <tr>
+                        <td><label>参数：</label></td>
+                        <td><input id="parastr" name="para_str" class="form-control" type="text"></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <input class="btn btn-default" id="bt_sub" type="submit" value="提交">
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </form>
+        </div>
     </div>
     <!-- 模态框（Modal） -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog"
