fix bug: file transfer

--- a/apps/templates/home.html
+++ b/apps/templates/home.html
@@ -16,7 +16,7 @@
 {% block content%}
     <div style="margin:auto; padding: 0px; width: 100%;text-align: center;overflow:hidden">
         <p>
-        codnor version:{{ version.message }}
+{#        codnor version:{{ version.message }}#}
         </p>
     </div>
 {% endblock %}
