--- a/apps/templates/jobcomplex.html
+++ b/apps/templates/jobcomplex.html
@@ -78,11 +78,11 @@
                     <tbody>
                     <tr>
                         <td><label>执行文件：</label></td>
-                        <td><input id="execstr" name="exec_str" class="form-control" type="text"></td>
+                        <td><input id="exec_str" name="exec_str" class="form-control" type="text"></td>
                     </tr>
                     <tr>
                         <td><label>参数：</label></td>
-                        <td><input id="parastr" name="para_str" class="form-control" type="text"></td>
+                        <td><input id="para_str" name="para_str" class="form-control" type="text"></td>
                     </tr>
                     <tr>
                         <td colspan="2">
